--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "dependencies": {
     "dotenv": "^17.2.2",
     "mongoose": "^8.18.1"
+  },
+  "scripts": {
+    "start": "node backend/server.js"
   }
 }
