--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "mongoose": "^8.18.1"
   },
   "scripts": {
-    "start": "node backend/server.js"
+    "start": "node backend/server.js",
+    "dev": "npm run dev --prefix frontend"
   }
 }
